--- a/src/css/login.css
+++ b/src/css/login.css
@@ -1,6 +1,8 @@
 body {
+
     background-color: #85FFBD;
     background-image: linear-gradient(45deg, #85FFBD 0%, #FFFB7D 100%); 
+    background-attachment: fixed;
 }
 
 .login {
