--- a/src/css/admin.css
+++ b/src/css/admin.css
@@ -1,45 +1,44 @@
 .location-form {
-    padding: 80px 0;
-    display: inline-flex;
+  padding: 80px 0;
+  display: inline-flex;
 }
 
 .location-form form {
-    min-width: 300px;
-    max-width: 480px;
-    width: 90%;
-    margin: 0 auto;
-    background-color: #fff;
-    padding: 40px;
-    border-radius: 4px;
-    color: #505e6c;
-    box-shadow: 1px 1px 5px rgba(0, 0, 0, .1);
+  min-width: 300px;
+  max-width: 480px;
+  width: 90%;
+  margin: 0 auto;
+  background-color: #fff;
+  padding: 40px;
+  border-radius: 4px;
+  color: #505e6c;
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
 }
 
 .location-form form .form-control {
-    background: #f7f9fc;
-    border: none;
-    border-bottom: 1px solid #dfe7f1;
-    border-radius: 0;
-    box-shadow: none;
-    outline: 0;
-    color: inherit;
-    text-indent: 8px;
-    height: 42px;
+  background: #f7f9fc;
+  border: none;
+  border-bottom: 1px solid #dfe7f1;
+  border-radius: 0;
+  box-shadow: none;
+  outline: 0;
+  color: inherit;
+  text-indent: 8px;
+  height: 42px;
 }
 
 .location-form form .btn-primary {
-    background: #f4476b;
-    border: none;
-    border-radius: 4px;
-    padding: 11px;
-    box-shadow: none;
-    margin-top: 26px;
-    text-shadow: none;
-    outline: 0 !important;
+  background: #f4476b;
+  border: none;
+  border-radius: 4px;
+  padding: 11px;
+  box-shadow: none;
+  margin-top: 26px;
+  text-shadow: none;
+  outline: 0 !important;
 }
 
 .location-form form .btn-primary:active,
 .location-form form .btn-primary:hover {
-    background: #eb3b60
+  background: #eb3b60;
 }
-
