--- a/src/css/login.css
+++ b/src/css/login.css
@@ -1,26 +1,25 @@
 body {
-
-    background-color: #85FFBD;
-    background-image: linear-gradient(45deg, #85FFBD 0%, #FFFB7D 100%); 
-    background-attachment: fixed;
+  background-color: #85ffbd;
+  background-image: linear-gradient(45deg, #85ffbd 0%, #fffb7d 100%);
+  background-attachment: fixed;
 }
 
 .login {
-    background-color: #fff;
-    max-width: 400px;
-    width: 90%;
-    margin: 0 auto;
-    padding: 40px;
-    border-radius: 6px;
-    box-shadow: 1px 1px 5px rgba(0, 0, 0, .1);
+  background-color: #fff;
+  max-width: 400px;
+  width: 90%;
+  margin: 0 auto;
+  padding: 40px;
+  border-radius: 6px;
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
 }
 
 .register {
-    background-color: #fff;
-    max-width: 400px;
-    width: 90%;
-    margin: 0 auto;
-    padding: 40px;
-    border-radius: 6px;
-    box-shadow: 1px 1px 5px rgba(0, 0, 0, .1);
+  background-color: #fff;
+  max-width: 400px;
+  width: 90%;
+  margin: 0 auto;
+  padding: 40px;
+  border-radius: 6px;
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
 }
