table header disable highlight

--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,12 @@
   text-align: center;
   height: 100vh;
 }
+
+.unselectable {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
