--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,10 @@
   -ms-user-select: none;
   user-select: none;
 }
+
+#commentSession {
+  /* height: 300px; */
+  height: 30em;
+  overflow: auto;
+  padding-bottom: 1em;
+}
